Updated libraries to the latest and greatest - one test still failing

--- a/build.gradle
+++ b/build.gradle
@@ -10,14 +10,14 @@ buildscript {
 }
 
 plugins {
-    id 'org.springframework.boot' version '2.2.5.RELEASE'
-    id 'io.spring.dependency-management' version '1.0.9.RELEASE'
+    id 'org.springframework.boot' version '2.7.0'
+    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'java-library'
     id 'checkstyle'
     id 'pmd'
     id 'jacoco'
-    id 'com.diffplug.gradle.spotless' version '3.25.0' apply false
-    id 'com.github.spotbugs' version '2.0.1' apply false
+    id 'com.diffplug.spotless' version '6.7.0' apply false
+    id 'com.github.spotbugs' version '5.0.7' apply false
 }
 
 apply plugin: 'java-library'
@@ -27,16 +27,16 @@ apply plugin: 'com.github.spotbugs'
 apply plugin: 'jacoco'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
-apply plugin: 'com.diffplug.gradle.spotless'
+apply plugin: 'com.diffplug.spotless'
 
 group = 'com.sherzad'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '11'
+sourceCompatibility = '17'
 
 ext {
     configDir = "${project.projectDir}/etc/config"
 }
-ext['lombok.version'] = '1.18.12'
+ext['lombok.version'] = '1.18.24'
 
 configurations {
     developmentOnly
@@ -58,10 +58,12 @@ dependencies {
 //    implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation "com.h2database:h2"
 
+    implementation 'javax.validation:validation-api:2.0.1.Final'
+
     implementation "org.liquibase:liquibase-core"
 
     implementation 'com.github.javafaker:javafaker:1.0.2'
-    implementation "com.google.guava:guava:28.1-jre"
+    implementation "com.google.guava:guava:31.1-jre"
 
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
@@ -83,7 +85,7 @@ apply from: "${project.rootDir}/gradle/jacoco.gradle"
 apply from: "${project.rootDir}/gradle/spotless.gradle"
 
 wrapper {
-    gradleVersion = '6.1.1'
+    gradleVersion = '7.4.2'
     distributionType = Wrapper.DistributionType.ALL
 }
 
@@ -96,6 +98,16 @@ test {
     }
 }
 
+configurations.all {
+  resolutionStrategy.eachDependency { details ->
+    if (details.requested.module.toString() == 'org.yaml:snakeyaml') {
+      details.artifactSelection {
+        it.selectArtifact(DependencyArtifact.DEFAULT_TYPE, null, null)
+      }
+    }
+  }
+}
+
 springBoot {
-    mainClassName = "com.sherzad.evcc.EvccApplication"
+    mainClass = "com.sherzad.evcc.EvccApplication"
 }
