--- a/gradle/pmd.gradle
+++ b/gradle/pmd.gradle
@@ -1,7 +1,7 @@
 pmd {
-    toolVersion = '6.21.0'
+    toolVersion = '6.46.0'
     ruleSets = []
     ruleSetFiles = files("${project.configDir}/pmd/ruleset.xml")
-    rulePriority = 4
+    // rulePriority = 4
     consoleOutput = true
 }
